--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,9 @@
   <body>
       <header class="header">
           <nav class="header-nav">
-                <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
+            <a class="header__logo" href="index.html">
+              <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
+            </a>
               <ul class="header__menu">
                 <li class="header__menu-item"><a class="header__menu-link" href="catalog.html">Каталог</a>
                   <ul class="header__menu-inner">
