--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-            <img class="header__logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
+            <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
           <ul class="header__menu">
             <li class="header__menu-item"><a class="header__menu-link" href="catalog.html">Каталог</a>
               <ul class="header__menu-inner">
@@ -113,16 +113,16 @@
             <div class="gifts-item__content">
               <h2 class="gifts-item__title">Малинка даром!</h2>
               <p class="gifts-item__text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно. </p>
-              <a class="gifts-item__link" href="">Хочу варенье!</a>
             </div>
+            <a class="gifts-item__link" href="">Хочу варенье!</a>
             </li>
           <li class="gifts-item gifts__item">
             <img src="img/gifts-item__background--choco.jpeg" width="570" height="300" alt="Фон с шоколадкой">
             <div class="gifts-item__content">
               <h2 class="gifts-item__title">Шоколадки даром!</h2>
               <p class="gifts-item__text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.   </p>
-              <a class="gifts-item__link" href="">Хочу шоколадки!</a>
             </div>
+            <a class="gifts-item__link" href="">Хочу шоколадки!</a>
             </li>
         </ul>
         <ul class="catalog">
