--- a/catalog.html
+++ b/catalog.html
@@ -13,54 +13,56 @@
             <a class="header__logo" href="index.html">
               <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
             </a>
-              <ul class="header__menu">
-                <li class="header__menu-item"><a class="header__menu-link" href="catalog.html">Каталог</a>
-                  <ul class="header__menu-inner">
-                    <li class="header__menu-inner-item header__menu-inner-item--bold"><a class="header__menu-inner-link" href="">Новинки</a></li>
-                    <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="catalog.html">Сливочное</a></li>
-                    <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="">Щербеты</a></li>
-                    <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="">Фруктовый лед</a></li>
-                    <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="">Мелорин</a></li>
-                  </ul>
-                </li>
-                <li class="header__menu-item"><a class="header__menu-link" href="">Доставка и оплата</a></li>
-                <li class="header__menu-item"><a class="header__menu-link" href="">О компании</a></li>
+          <ul class="header__menu">
+            <li class="header__menu-item"><a class="header__menu-link" href="catalog.html">Каталог</a>
+              <ul class="header__menu-inner">
+                <li class="header__menu-inner-item header__menu-inner-item--bold"><a class="header__menu-inner-link" href="">Новинки</a></li>
+                <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="catalog.html">Сливочное</a></li>
+                <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="">Щербеты</a></li>
+                <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="">Фруктовый лед</a></li>
+                <li class="header__menu-inner-item"><a class="header__menu-inner-link" href="">Мелорин</a></li>
               </ul>
+            </li>
+            <li class="header__menu-item"><a class="header__menu-link" href="">Доставка и оплата</a></li>
+            <li class="header__menu-item"><a class="header__menu-link" href="">О компании</a></li>
+          </ul>
         <div class="header__user-buttons">
           <div class="header__user-buttons-find">
             <a class="header__find-link" href="">
               <img src="img/loupe.svg" width="17" height="17" alt="Окно поиска">
               </a>
-              <div>
-                <form class="header__find-field">
+              <div class="header__find-field">
+                <form>
                   <label class="visually-hidden" for="find-field">Окно поиска</label>
-                  <input class="visually-hidden" type="text" placeholder="Что ищем?" name="find-field" id="find-field">
+                  <input type="text" placeholder="Что ищем?" name="find-field" id="find-field">
                 </form>
               </div>
           </div>
           <div class="header__user-buttons-enter">
-            <button class="header__enter-link"  type="button">
-              <img src="img/entrance.svg" width="21" height="19" alt="Авторизация">
-              Вход
-            </button>
-            <div class="header__enter-field visually-hidden">
-              <form>
-                  <label class="visually-hidden" for="user-email">Электронная почта пользователя</label>
-                  <input type="email" placeholder="Электронная почта" name="user-email" id="user-email" required>
-                  <label class="visually-hidden" for="user-password ">Пароль для авторизации</label>
-                  <input type="password" placeholder="Пароль" name="user-password" id="user-password" required>
-                  <button type="submit">Войти</button>
-                  <div class="enter-field__forgot-password">
-                    <a class="enter-field__password-reminder" href="">Забыли пароль?</a>
-                    <a class="enter-field__new-user" href="">Новая регистрация</a>
-                  </div>
-              </form>
+            <a class="header__enter-link" href="">
+                <img src="img/entrance.svg" width="21" height="19" alt="Авторизация"> Вход
+            </a>
+            <div class="header__enter-field">
+                <form>
+                    <label class="visually-hidden" for="user-email">Электронная почта пользователя</label>
+                    <input type="email" placeholder="Электронная почта" name="user-email" id="user-email" required>
+                    <label class="visually-hidden" for="user-password ">Пароль для авторизации</label>
+                    <input type="password" placeholder="Пароль" name="user-password" id="user-password" required>
+                    <div class="enter-field__submit">
+                        <button type="submit">Войти</button>
+                        <div class="enter-field__forgot-password">
+                          <a class="enter-field__password-reminder" href="">Забыли пароль?</a>
+                          <a class="enter-field__new-user" href="">Новая регистрация</a>
+                        </div>
+                      </div>
+                </form>
             </div>
           </div>
           <div class="header__user-buttons-basket">
-            <a href="header--basket-link">
-              <img src="img/basket.svg" width="21" height="20" alt="Корзина">Корзина
+            <a class="header__basket-link" href="">
+              <img src="img/basket.svg" width="21" height="20" alt="Корзина"> Пусто
             </a>
+            <div></div>
           </div>
         </div>
       </nav>
@@ -69,7 +71,6 @@
         <p class="contacts__phone"><a href="tel: 8 812 450-25-25">8 812 450-25-25</a></p>
     </div>
     </header>
-
 
 
 
@@ -144,6 +145,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -155,6 +157,7 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-кофейное с кусочками шоколада</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
               <img src="img/ice-cream__3.jpg" width="267" height="267" alt="Фото мороженого">
@@ -163,8 +166,8 @@
                 <span class="catalog-item__ruble">₽</span>
                 <span class="catalog-item__weight">/кг</span>
               </div>
-              <button class="catalog-item__hover-button">Быстрый просмотр</button>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
             </li>
             <li class="catalog__item catalog-item">
               <div>
@@ -176,96 +179,105 @@
                 </div>
               </div>
               <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное крем-брюле с карамельной подливкой</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
             </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__5.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">325</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с брусничным джемом</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__6.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">410</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-черничное с цельными ягодами черники</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__7.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">375</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-лимонное с карамельной присыпкой</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__8.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">320</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с шоколадной стружкой</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__9.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">440</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-ванильное с кусочками шоколада</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__10.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">435</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочноe с ментоловым сиропом</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__11.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">355</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с кусочками черного шоколада</a></h3>
-        </li>
-        <li class="catalog__item catalog-item">
-          <div>
-            <img src="img/ice-cream__12.jpg" width="267" height="267" alt="Фото мороженого">
-            <div>
-              <span class="catalog-item__price">420</span>
-              <span class="catalog-item__ruble">₽</span>
-                  <span class="catalog-item__weight">/кг</span>
-            </div>
-          </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с мятным сиропом</a></h3>
-        </li>
-      </ul>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__5.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">325</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с брусничным джемом</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__6.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">410</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-черничное с цельными ягодами черники</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__7.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">375</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-лимонное с карамельной присыпкой</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__8.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">320</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с шоколадной стружкой</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__9.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">440</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочно-ванильное с кусочками шоколада</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__10.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">435</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочноe с ментоловым сиропом</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__11.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">355</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с кусочками черного шоколада</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <div>
+                <img src="img/ice-cream__12.jpg" width="267" height="267" alt="Фото мороженого">
+                <div>
+                  <span class="catalog-item__price">420</span>
+                  <span class="catalog-item__ruble">₽</span>
+                      <span class="catalog-item__weight">/кг</span>
+                </div>
+              </div>
+              <h3 class="catalog-item__title"><a class="catalog-item__title-link">Сливочное с мятным сиропом</a></h3>
+              <button class="catalog-item__hover-button">Быстрый просмотр</button>
+            </li>
+          </ul>
 
 
 
