--- a/index.html
+++ b/index.html
@@ -265,21 +265,21 @@
             <img src="img/vk.svg" width="32" height="32" alt="Вконтакте"></a></li>
         </ul>
         <ul class="footer__about">
-            <li class="footer__about-item">
-              <i class="footer__about-item--icon"></i>
-              <a class="footer__about-link footer__about-link--bold" href="">Для поставщиков</a>
-            </li>
-            <li><a class="footer__about-link" href="">О производстве</a>
-            </li>
+              <li class="footer__about-item">
+                <i class="footer__about-item--icon"></i>
+                <a class="footer__about-link footer__about-link--bold" href="">Для поставщиков</a>
+              </li>
+              <li class="footer__about-item"><a class="footer__about-link" href="">О производстве</a>
+              </li>
+              <li class="footer__about-item"><a class="footer__about-link" href="">Наши документы</a></li>
+              <li class="footer__about-item"><a class="footer__about-link" href="">Экологические стандарты</a></li>
         </ul>
-        <ul class="footer__about">
-          <li class="footer__about-item"><a class="footer__about-link" href="">Наши документы</a></li>
-          <li class="footer__about-item"><a class="footer__about-link" href="">Экологические стандарты</a></li>
-        </ul>
-        <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
-        </a>
-        <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
+        <div>
+          <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
+          </a>
+          <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
+        </div>
       </footer>
     </body>
   </html>
